--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,25 +4,37 @@
     padding: 0;
   }
 
+
   body{
+  
     background-image: url('/public/images/home.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
+    overflow: hidden;
     background-size: cover;
   }
   .menu-items {
-    position: fixed;
+    /* position: fixed; */
     height: 50px;
     width: 100%;
     display: flex;
     align-items: center;
     background-color: #C4CAD7;
   }
-  .logo img{
- max-width: 45px;
- margin-right: 400px;
+  .logo{
+    margin-right: 250px;
+    margin-left: 50px;
+    display: flex;
+    align-items: center;
   }
-  
+  .logo img{
+ max-width: 35px;
+padding: 5px;
+  }
+  .logoContent a {
+    text-decoration: none ;
+    color  : black  ;
+  }
   .menu-items > a {
    padding: 70px;
   }
@@ -39,12 +51,57 @@ margin-top: 1rem;
   text-align: center;
 }
 
-#home{
-text-align: center;
-}
 
-#analog-clock {
+
+
+/* #analog-clock {
   opacity: 1;
   position:absolute; 
   margin: 220px;
+} */
+/**
+* Style For Home Page 
+*/
+
+
+
+#clocks-container {
+
+  display: flex;
+  width : 100%;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+}
+
+.digital-clock {
+  width: 250px;
+  height: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 35px;
+
+}
+.digital-clock > div {
+  background-color: #ffffff;
+  border: 2px solid black  ;
+  border-radius: 15px;
+  padding: 15px 10px;
+}
+
+.digital-clock > div * {
+  color: black !important;
+}
+
+.toggle-clocks{
+  background-color: #C4CAD7;
+  color: black;
+  padding: 10px;
+  margin: 15px 0;
+  cursor: pointer;
+  border-radius: 20px;
+  min-width: 200px;
+  font-size: 20px;
+  font-weight: bold;
 }
