--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,7 +71,7 @@ margin-top: 1rem;
   width : 100%;
   flex-direction: column;
   align-items: center;
-  padding: 30px;
+  padding: 5% 0 ;
 }
 
 .digital-clock {
