--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,7 +84,7 @@ margin-top: 1rem;
 
 }
 .digital-clock > div {
-  background-color: #ffffff;
+  background-color: #c4cad79d;
   border: 2px solid black  ;
   border-radius: 15px;
   padding: 15px 10px;
@@ -95,7 +95,7 @@ margin-top: 1rem;
 }
 
 .toggle-clocks{
-  background-color: #C4CAD7;
+  background-color: #c4cad775;
   color: black;
   padding: 10px;
   margin: 15px 0;
