. toggle-clocks font style

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,8 +100,10 @@ margin-top: 1rem;
   padding: 10px;
   margin: 15px 0;
   cursor: pointer;
-  border-radius: 20px;
-  min-width: 200px;
-  font-size: 20px;
-  font-weight: bold;
+  border-radius: 30px;
+  min-width: 100px;
+  font-size: 17px;
+  font-weight: normal;
+  font-weight: 450;
+  font-kerning: auto;
 }
