--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,6 @@
     padding: 0;
     font-family: 'Montserrat', sans-serif;
     overflow-x: hidden !important;
-    overflow-y: hidden;
   }
 
 
@@ -65,14 +64,9 @@
   font-weight: 600;
   text-align: center;
 }
-
-
-
-
 /**
 * Style For Home Page 
 */
-
 #clocks-container {
 
   display: flex;
@@ -266,6 +260,92 @@
   font-size: 18px;
   font-weight: bold;
 }
+/** 
+ city detail css
+*/
+
+.city-detail {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.city-detail img {
+  width: 100%;
+  height: 100%;
+}
+
+.text {
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  top: 180px;
+  left: 100px;
+  right: 100px;
+  background-color: rgba(3, 3, 3, 0.644);
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+.city-detail h1{
+  margin-top: 10px;
+  padding: 10px;
+}
+.city-detail p{
+  margin-top: 1opx;
+  padding: 10px;
+}
+
+.description { 
+  float: left;
+  width: 50%;
+}
+.clock{
+  width: 50%;
+  float: right;
+}
+.btn{
+  position: relative;
+  float: left;
+}
+
+@media screen and (max-width : 360px) {
+  #show-fav-cities > div:nth-child(1) {
+    display:  none;
+  }
+  .city-detail {
+    width : 90vw;
+    min-height: 700px;
+    max-height: 900px;
+  }
+}
+/**
+ city list css
+*/
+
+.city{
+  background-color: rgb(23, 130, 172);
+  margin-bottom: 1%;
+  max-width: 650px;
+  cursor: pointer;
+  padding: 25px;
+  border-bottom: 1px solid white;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 5px;
+  }
+  .city img{
+  float: right;
+  width: 35%;
+  border-radius: 5px;
+  }
+  .city h3{
+  margin: 0;
+  }
+  .city:hover{
+  background-color: rgb(42, 177, 226);
+  }
 
 
 /**
