Responsiv sajt - Hisham

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,8 +2,9 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif !important;
     overflow-x: hidden !important;
+
   }
 
 
@@ -83,13 +84,19 @@
   align-items: center;
   justify-content: center;
   font-size: 35px;
+  overflow-y: hidden;
 
+
+}
+.digital-clock * {
+  overflow-y: hidden;
 }
 .digital-clock > div {
   background-color: #c4cad79d;
   border: 2px solid black  ;
   border-radius: 15px;
   padding: 15px 10px;
+ 
 }
 
 .digital-clock > div * {
@@ -128,6 +135,7 @@
   align-items: center;
   justify-content: baseline;
   user-select: none;
+  overflow-y: hidden;
 
 }
 
@@ -160,16 +168,20 @@
   font-size:  18px !important;
 
 }
-
+.fav-digital-clock * {
+  overflow-y: hidden;
+}
 .fav-digital-clock > div *{
     color:  #ececec !important;
     font-size: 30px;
-}
+
+  }
 
 #show-fav-cities{
 
   position: relative;
   margin-bottom:  35px;
+
 }
 #show-fav-cities > div:nth-child(1){
     position: absolute;
@@ -216,7 +228,7 @@
 
   position: relative;
   width: 100%;
-
+  overflow-y: hidden;
   padding-top: 30px;
 
 }
@@ -277,34 +289,44 @@
 
 .text {
   position: absolute;
-  width: 50%;
-  height: 50%;
-  top: 180px;
-  left: 100px;
-  right: 100px;
+  width: 90vw;
+  top: 10vh;
+  margin-bottom:  20px;
+  padding-bottom:  20px;
+  left: 5vw;
   background-color: rgba(3, 3, 3, 0.644);
   color: white;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  display:  flex;
+  flex-direction:  column;
 }
-.city-detail h1{
+
+.city-detail   h1{
   margin-top: 10px;
   padding: 10px;
+  margin-bottom: 5px;
 }
-.city-detail p{
+
+.city-detail  p{
   margin-top: 1opx;
   padding: 10px;
 }
 
-.description { 
-  float: left;
-  width: 50%;
+.city-dc-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
 }
-.clock{
-  width: 50%;
-  float: right;
+
+.city-dc-container > .description {
+  max-width: 50%;
+
 }
+
+
 .btn{
   position: relative;
   float: left;
@@ -348,11 +370,19 @@
   }
 
 
+
+
+
+  .city-list{
+
+    margin: 10px 0;
+  }
+
 /**
   responsive
 */
 
-@media screen and (max-width : 800px) {
+@media screen and (max-width : 865px) {
   #show-fav-cities > div:nth-child(1) {
     display:  none;
   }
@@ -361,4 +391,29 @@
     min-height: 700px;
     max-height: 900px;
   }
+  #favorite {
+      margin-bottom:  30px;
+  }
+
+  .nav-links {
+      margin: 10px 5vw;
+      flex-flow: nowrap;
+  }
+  .menu-items {
+    flex-wrap: wrap;
+    padding-top: 10px;
+    padding-bottom: 5px;
+  }
+  .fav-clock{
+    margin-top: 5px;
+  }
+  .city-dc-container > * {
+    margin-top: 10px;
+  }  
+.city-dc-container > .fav-clock {
+    margin: auto;
+}
+.city-dc-container > .description {
+  margin: auto;
+}
 }
