--- a/public/css/style.css
+++ b/public/css/style.css
@@ -274,11 +274,14 @@
 /** 
  city detail css
 */
-
 .city-detail {
   position: absolute;
+  overflow-y: scroll;
   width: 100%;
   height: 100%;
+  padding-bottom: 20px;
+  z-index: 500;
+
 }
 
 .city-detail img {
